--- a/hw1/hw1/tasks/main.yml
+++ b/hw1/hw1/tasks/main.yml
@@ -68,5 +68,5 @@
     regexp: '^(GRUB_CMDLINE_LINUX=(?!.* biosdevname)\"[^\"]+)(\".*)'
     line: '\1 biosdevname=0\2'
 
-- name: grub2-mkconfig apply 
-  command: grub2-mkconfig -o /etc/default/grub
+- name: grub2-mkconfig apply
+  command: grub2-mkconfig -o /boot/grub2/grub.cfg
